// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FzNavlink > Snapshots > should match snapshot - default state 1`] = `
"<button class="flex w-32 flex-row items-center justify-center text-grey-500 hover:bg-background-alice-blue border-1 focus:border-1 focus:bg-background-alice-blue disabled:text-grey-100 disabled:bg-core-white h-32 items-center rounded border-transparent text-sm hover:text-blue-500 focus:border-blue-500 focus:text-blue-500 disabled:border-transparent font-medium">
  <!--v-if-->
  <!--v-if-->
</button>"
`;

exports[`FzNavlink > Snapshots > should match snapshot - disabled state 1`] = `
"<button disabled="" class="px-12 py-6 text-grey-500 hover:bg-background-alice-blue border-1 focus:border-1 focus:bg-background-alice-blue disabled:text-grey-100 disabled:bg-core-white h-32 items-center rounded border-transparent text-sm hover:text-blue-500 focus:border-blue-500 focus:text-blue-500 disabled:border-transparent font-medium">
  <!--v-if--><span>Disabled Link</span>
</button>"
`;

exports[`FzNavlink > Snapshots > should match snapshot - icon only 1`] = `
"<button class="flex w-32 flex-row items-center justify-center text-grey-500 hover:bg-background-alice-blue border-1 focus:border-1 focus:bg-background-alice-blue disabled:text-grey-100 disabled:bg-core-white h-32 items-center rounded border-transparent text-sm hover:text-blue-500 focus:border-blue-500 focus:text-blue-500 disabled:border-transparent font-medium">
  <div class="flex items-center justify-center w-[25px] h-[25px]"><svg class="svg-inline--fa fa-bell fa-lg h-[20px]" aria-hidden="true" focusable="false" data-prefix="far" data-icon="bell" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
      <path class="" fill="currentColor" d="M224 0c-17.7 0-32 14.3-32 32l0 19.2C119 66 64 130.6 64 208l0 25.4c0 45.4-15.5 89.5-43.8 124.9L5.3 377c-5.8 7.2-6.9 17.1-2.9 25.4S14.8 416 24 416l400 0c9.2 0 17.6-5.3 21.6-13.6s2.9-18.2-2.9-25.4l-14.9-18.6C399.5 322.9 384 278.8 384 233.4l0-25.4c0-77.4-55-142-128-156.8L256 32c0-17.7-14.3-32-32-32zm0 96c61.9 0 112 50.1 112 112l0 25.4c0 47.9 13.9 94.6 39.7 134.6L72.3 368C98.1 328 112 281.3 112 233.4l0-25.4c0-61.9 50.1-112 112-112zm64 352l-64 0-64 0c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7s18.7-28.3 18.7-45.3z"></path>
    </svg></div>
  <!--v-if-->
</button>"
`;

exports[`FzNavlink > Snapshots > should match snapshot - with icon and label 1`] = `
"<button class="px-12 py-6 text-grey-500 hover:bg-background-alice-blue border-1 focus:border-1 focus:bg-background-alice-blue disabled:text-grey-100 disabled:bg-core-white h-32 items-center rounded border-transparent text-sm hover:text-blue-500 focus:border-blue-500 focus:text-blue-500 disabled:border-transparent font-medium">
  <div class="flex items-center justify-center w-[25px] h-[25px] mr-8"><svg class="svg-inline--fa fa-house fa-lg h-[20px]" aria-hidden="true" focusable="false" data-prefix="far" data-icon="house" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
      <path class="" fill="currentColor" d="M303.5 5.7c-9-7.6-22.1-7.6-31.1 0l-264 224c-10.1 8.6-11.3 23.7-2.8 33.8s23.7 11.3 33.8 2.8L64 245.5 64 432c0 44.2 35.8 80 80 80l288 0c44.2 0 80-35.8 80-80l0-186.5 24.5 20.8c10.1 8.6 25.3 7.3 33.8-2.8s7.3-25.3-2.8-33.8l-264-224zM112 432l0-227.2L288 55.5 464 204.8 464 432c0 17.7-14.3 32-32 32l-48 0 0-152c0-22.1-17.9-40-40-40l-112 0c-22.1 0-40 17.9-40 40l0 152-48 0c-17.7 0-32-14.3-32-32zm128 32l0-144 96 0 0 144-96 0z"></path>
    </svg></div><span>Home</span>
</button>"
`;

exports[`FzNavlink > Snapshots > should match snapshot - with label 1`] = `
"<button class="px-12 py-6 text-grey-500 hover:bg-background-alice-blue border-1 focus:border-1 focus:bg-background-alice-blue disabled:text-grey-100 disabled:bg-core-white h-32 items-center rounded border-transparent text-sm hover:text-blue-500 focus:border-blue-500 focus:text-blue-500 disabled:border-transparent font-medium">
  <!--v-if--><span>Navigation Link</span>
</button>"
`;

exports[`FzNavlink > Snapshots > should match snapshot - with slot 1`] = `
"<button class="px-12 py-6 text-grey-500 hover:bg-background-alice-blue border-1 focus:border-1 focus:bg-background-alice-blue disabled:text-grey-100 disabled:bg-core-white h-32 items-center rounded border-transparent text-sm hover:text-blue-500 focus:border-blue-500 focus:text-blue-500 disabled:border-transparent font-medium">
  <!--v-if-->Custom Content
</button>"
`;

exports[`FzRouterNavlink > Snapshots > should match snapshot - default state 1`] = `
"<a href="/about" class="px-12 py-6 text-grey-500 hover:bg-background-alice-blue border-1 focus:border-1 focus:bg-background-alice-blue disabled:text-grey-100 disabled:bg-core-white h-32 items-center rounded border-transparent text-sm hover:text-blue-500 focus:border-blue-500 focus:text-blue-500 disabled:border-transparent font-medium">
  <!--v-if--><span>Router Link</span>
</a>"
`;

exports[`FzRouterNavlink > Snapshots > should match snapshot - disabled state 1`] = `"<span class="px-12 py-6 text-grey-100 border-1 bg-core-white h-32 items-center rounded border-transparent text-sm border-transparent font-medium cursor-pointer"><!--v-if--><span>Disabled Router Link</span></span>"`;

exports[`FzRouterNavlink > Snapshots > should match snapshot - with icon 1`] = `
"<a href="/" class="px-12 py-6 text-grey-500 hover:bg-background-alice-blue border-1 focus:border-1 focus:bg-background-alice-blue disabled:text-grey-100 disabled:bg-core-white h-32 items-center rounded border-transparent text-sm hover:text-blue-500 focus:border-blue-500 focus:text-blue-500 disabled:border-transparent font-medium">
  <div class="flex items-center justify-center w-[25px] h-[25px] mr-8"><svg class="svg-inline--fa fa-house fa-lg h-[20px]" aria-hidden="true" focusable="false" data-prefix="far" data-icon="house" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
      <path class="" fill="currentColor" d="M303.5 5.7c-9-7.6-22.1-7.6-31.1 0l-264 224c-10.1 8.6-11.3 23.7-2.8 33.8s23.7 11.3 33.8 2.8L64 245.5 64 432c0 44.2 35.8 80 80 80l288 0c44.2 0 80-35.8 80-80l0-186.5 24.5 20.8c10.1 8.6 25.3 7.3 33.8-2.8s7.3-25.3-2.8-33.8l-264-224zM112 432l0-227.2L288 55.5 464 204.8 464 432c0 17.7-14.3 32-32 32l-48 0 0-152c0-22.1-17.9-40-40-40l-112 0c-22.1 0-40 17.9-40 40l0 152-48 0c-17.7 0-32-14.3-32-32zm128 32l0-144 96 0 0 144-96 0z"></path>
    </svg></div><span>Home</span>
</a>"
`;
